--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Jon Barron
+                  Ruoqing Feng
                 </p>
                 <p>
 		I am a computational biologist and PhD student at the German Center for Neurodegenerative Diseases (DZNE; LMU-GSN), working with Prof. Mikael Simons. I study how neuroinflammatory programs are organized in space and time within the central nervous system, leveraging single-cell and spatial transcriptomics to resolve cell states, their interactions, and the tissue microenvironments that sustain pathology. My goal is to bridge molecular profiles with histological context, identifying disease-relevant cellular niches and actionable pathways in chronic active multiple sclerosis lesions. I also enjoy building reproducible analysis pipelines and quantitative frameworks that help make complex spatial data interpretable and biologically testable.
