--- a/index.html
+++ b/index.html
@@ -93,50 +93,38 @@
   </td>
 </tr>
 
-<tr onmouseout="nexf_stop()" onmouseover="nexf_start()">
-      <td style="padding:16px;width:20%;vertical-align:middle">
-        <div class="one">
-          <div class="two" id='nexf_image'>
-					  <img src='images/nexf_after.jpg' width=100%>
-					</div>
-          <img src='images/nexf_before.jpg' width=100%>
-        </div>
-        <script type="text/javascript">
-          function nexf_start() {
-            document.getElementById('nexf_image').style.opacity = "1";
-          }
+<tr>
+  <!-- Left: thumbnail -->
+  <td style="padding:16px;width:20%;vertical-align:middle">
+    <img
+      src="images/radmesh_thumb.jpg"
+      alt="Radiance Meshes thumbnail"
+      width="320"
+      height="200"
+      loading="lazy"
+      style="width:100%;height:auto;border-radius:8px;"
+    >
+  </td>
 
-          function nexf_stop() {
-            document.getElementById('nexf_image').style.opacity = "0";
-          }
-          nexf_stop()
-        </script>
-      </td>
-      <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://m-niemeyer.github.io/nexf/">
-          <span class="papertitle">NExF: Learning Neural Exposure Fields for View Synthesis</span>
-        </a>
-        <br>
-        <a href="https://m-niemeyer.github.io/">Michael Niemeyer</a>,
-        <a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
-        <a href="http://www.lix.polytechnique.fr/Labo/Marie-Julie.RAKOTOSAONA/">Marie-Julie Rakotosaona</a>,
-        <a href="https://moechsle.github.io">Michael Oechsle</a>,
-        <a href="https://ait.ethz.ch/people/ctsalico">Christina Tsalicoglou</a>,
-        <a href="https://scholar.google.com/citations?user=ml3laqEAAAAJ&hl=ja">Keisuke Tateno</a>,
-        <strong>Jonathan T. Barron</strong>,
-        <a href="https://federicotombari.github.io/">Federico Tombari</a>
-        <br>
-        <em>NeurIPS</em>, 2025
-        <br>
-        <a href="https://m-niemeyer.github.io/nexf/">project page</a>
-        /
-        <a href="https://arxiv.org/abs/2510.08279">arXiv</a>
-        <p></p>
-        <p>
-		Learning a neural field that optimizes exposure for each 3D point enables high-quality 3D-consistent view synthesis despite extreme exposure variation during capture.
-        </p>
-      </td>
-    </tr>
+  <!-- Right: text -->
+  <td style="padding:8px;width:80%;vertical-align:middle">
+    <a href="https://half-potato.gitlab.io/rm/">
+      <span class="papertitle">Radiance Meshes for Volumetric Reconstruction</span>
+    </a>
+    <br>
+    Alexander Mai, Trevor Hedstrom, George Kopanas, Janne Kontkanen,
+    Falko Kuester, <strong>Jonathan T. Barron</strong>
+    <br>
+    <em>arXiv</em>, 2025
+    <br>
+    <a href="https://half-potato.gitlab.io/rm/">project</a> /
+    <a href="https://arxiv.org/abs/2512.04076">arXiv</a>
+    <p style="margin:6px 0 0 0;">
+      Fast, editable volumetric reconstruction via a tetrahedral scene representation and a neural field.
+    </p>
+  </td>
+</tr>
+
 	
     <tr onmouseout="bolt3d_stop()" onmouseover="bolt3d_start()"  bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
