--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 		I am a computational biologist and PhD student at the German Center for Neurodegenerative Diseases (DZNE; LMU-GSN), working with Prof. Mikael Simons. I study how neuroinflammatory programs are organized in space and time within the central nervous system, leveraging single-cell and spatial transcriptomics to resolve cell states, their interactions, and the tissue microenvironments that sustain pathology. My goal is to bridge molecular profiles with histological context, identifying disease-relevant cellular niches and actionable pathways in chronic active multiple sclerosis lesions. I also enjoy building reproducible analysis pipelines and quantitative frameworks that help make complex spatial data interpretable and biologically testable.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:fengruoqing123@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="https://scholar.google.com/citations?user=f8fKyfMAAAAJ&hl=zh-CN">Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://x.com/fngruqng2">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://github.com/Ruoqing-feng">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
