--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <td style="padding:16px;width:20%;vertical-align:middle">
     <div class="one">
       <div class="two" id='radmesh_image'>
-        <img src='images/radmesh_after.jpg' width=100%>
+        <img src='images/fx1.jpg' width=100%>
       </div>
       <img src='images/radmesh_before.jpg' width=100%>
     </div>
