--- a/index.html
+++ b/index.html
@@ -49,55 +49,12 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-<tr onmouseout="radmesh_stop()" onmouseover="radmesh_start()" bgcolor="#ffffd0">
-  <td style="padding:16px;width:20%;vertical-align:middle">
-    <div class="one">
-      <div class="two" id='radmesh_image'>
-        <img src='images/fx1.jpg' width=100%>
-      </div>
-      <img src='images/radmesh_before.jpg' width=100%>
-    </div>
-    <script type="text/javascript">
-      function radmesh_start() {
-        document.getElementById('radmesh_image').style.opacity = "1";
-      }
-
-      function radmesh_stop() {
-        document.getElementById('radmesh_image').style.opacity = "0";
-      }
-      radmesh_stop()
-    </script>
-  </td>
-  <td style="padding:8px;width:80%;vertical-align:middle">
-    <a href="https://half-potato.gitlab.io/rm/">
-      <span class="papertitle">Radiance Meshes for Volumetric Reconstruction</span>
-    </a>
-    <br>
-    <a href="https://half-potato.gitlab.io/">Alexander Mai</a>,
-    <a href="https://github.com/Shmaug">Trevor Hedstrom</a>,
-    <a href="https://grgkopanas.github.io/">George Kopanas</a>, <br>
-	<a href="https://mediatech.aalto.fi/~janne/index.php">Janne Kontkanen</a>, 
-    <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Falko Kuester</a>,
-    <strong>Jonathan T. Barron</strong>
-    <br>
-    <em>arXiv</em>, 2025
-    <br>
-    <a href="https://half-potato.gitlab.io/rm/">project page</a>
-    /
-    <a href="https://arxiv.org/abs/2512.04076">arXiv</a>
-    <p></p>
-    <p>
-	Parameterizing a scene with a Delaunay tetrahedralization and a neural field yields a scene representation that is accurate, fast to render, easy to edit, and backwards-compatible.
-    </p>
-  </td>
-</tr>
-
 <tr>
   <!-- Left: thumbnail -->
   <td style="padding:16px;width:20%;vertical-align:middle">
     <img
-      src="images/radmesh_thumb.jpg"
-      alt="Radiance Meshes thumbnail"
+      src="images/fx1.jpg"
+      alt="MS lesions spatial transcriptomics (Immunity 2025) thumbnail"
       width="320"
       height="200"
       loading="lazy"
@@ -107,20 +64,22 @@
 
   <!-- Right: text -->
   <td style="padding:8px;width:80%;vertical-align:middle">
-    <a href="https://half-potato.gitlab.io/rm/">
-      <span class="papertitle">Radiance Meshes for Volumetric Reconstruction</span>
+    <a href="https://www.cell.com/immunity/fulltext/S1074-7613(25)00433-9">
+      <span class="papertitle">Single-cell spatial transcriptomic profiling defines a pathogenic inflammatory niche in chronic active multiple sclerosis lesions</span>
     </a>
     <br>
-    Alexander Mai, Trevor Hedstrom, George Kopanas, Janne Kontkanen,
-    Falko Kuester, <strong>Jonathan T. Barron</strong>
+    <strong>Ruoqing Feng</strong>, Lena Spieth, Lu Liu, <em>et al.</em>, Mikael Simons
     <br>
-    <em>arXiv</em>, 2025
+    <em>Immunity</em>, 2025
     <br>
-    <a href="https://half-potato.gitlab.io/rm/">project</a> /
-    <a href="https://arxiv.org/abs/2512.04076">arXiv</a>
+    <a href="https://www.cell.com/immunity/fulltext/S1074-7613(25)00433-9">article</a>
+    /
+    <a href="https://doi.org/10.1016/j.immuni.2025.10.003">DOI</a>
+    /
+    <a href="https://pubmed.ncbi.nlm.nih.gov/41167189/">PubMed</a>
+
     <p style="margin:6px 0 0 0;">
-      Fast, editable volumetric reconstruction via a tetrahedral scene representation and a neural field.
+      A single-cell molecular and spatial atlas of chronic active MS lesions using snRNA-seq and MERFISH.
     </p>
   </td>
 </tr>
-
