--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:fengruoqing123@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/RuoqingFengupdated.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=f8fKyfMAAAAJ&hl=zh-CN">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/fngruqng2">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Ruoqing-feng">Github</a>
