--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/rqf.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/rqf.jpg" class="hoverZoomLink"></a>
+                <a href="images/rqf.jpeg""<img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/rqf.jpg" class=s/rqf.jpeg" class</a>
               </td>
             </tr>
           </tbody></table>
