--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
                   <a href="https://x.com/fngruqng2">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Ruoqing-feng">Github</a>
                 </p>
-              </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/rqf.jpeg""<img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/rqf.jpg" class=s/rqf.jpeg" class</a>
-              </td>
+  <a href="images/rqf.jpeg">
+    <img
+      style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;"
+      alt="profile photo"
+      src="images/rqf.jpeg"
+      class="hoverZoomLink"
+      loading="lazy"
+    >
+  </a>
+</td>
+
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
